// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Meeting Control Active Icon 1`] = `
Array [
  <button
    alt="Unmute"
    aria-label="Unmute"
    aria-pressed={null}
    className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
    data-md-event-key="md-button-0"
    disabled={false}
    id="md-button-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "style": Object {},
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="md-button__children"
      style={
        Object {
          "opacity": "1",
        }
      }
    >
      <i
        aria-label={null}
        className="md-icon icon icon-microphone-muted_28"
        style={
          Object {
            "fontSize": 28,
          }
        }
      />
    </span>
  </button>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Disabled Icon 1`] = `
Array [
  <button
    alt="Mute disabled"
    aria-label="Mute disabled"
    aria-pressed={null}
    className="md-button md-button--circle md-button--56 wxc-meeting-control"
    data-md-event-key="md-button-0"
    disabled={true}
    id="md-button-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "style": Object {},
      }
    }
    tabIndex={null}
    type="button"
  >
    <span
      className="md-button__children"
      style={
        Object {
          "opacity": "1",
        }
      }
    >
      <i
        aria-label={null}
        className="md-icon icon icon-microphone_28"
        style={
          Object {
            "fontSize": 28,
          }
        }
      />
    </span>
  </button>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Disabled Text 1`] = `
Array [
  <button
    alt="Join meeting"
    aria-label="Join meeting"
    aria-pressed={null}
    className="md-button md-button--52 md-button--green wxc-meeting-control"
    data-md-event-key="md-button-0"
    data-md-keyboard-key="join-meeting"
    disabled={true}
    id="md-button-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "style": Object {},
      }
    }
    tabIndex={null}
    type="button"
  >
    <span
      className="md-button__children"
      style={
        Object {
          "opacity": "1",
        }
      }
    >
      Join meeting
    </span>
  </button>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Dropdown 1`] = `
Array [
  <select
    className="wxc-select wxc-meeting-control"
    onChange={[Function]}
    value="cameraID1"
  >
    <option
      value="2a9f83242466302e2130134a57162f3562c59bd9ea34daa7f6fc2ad43a29265b"
    >
      Logitech HD Webcam C525 (046d:0826)
    </option>
    <option
      value="c2fcaf0c6b0bc7adc1192ba0b2dd236f7926e2ae163c56f80fa51613f9b9ec77"
    >
      Integrated Camera (04f2:b6d9)
    </option>
  </select>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Inactive Icon 1`] = `
Array [
  <button
    alt="Mute"
    aria-label="Mute"
    aria-pressed={null}
    className="md-button md-button--circle md-button--56 wxc-meeting-control"
    data-md-event-key="md-button-0"
    disabled={false}
    id="md-button-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "style": Object {},
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="md-button__children"
      style={
        Object {
          "opacity": "1",
        }
      }
    >
      <i
        aria-label={null}
        className="md-icon icon icon-microphone-muted_28"
        style={
          Object {
            "fontSize": 28,
          }
        }
      />
    </span>
  </button>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Text 1`] = `
Array [
  <button
    alt="Join meeting"
    aria-label="Join meeting"
    aria-pressed={null}
    className="md-button md-button--52 md-button--green wxc-meeting-control"
    data-md-event-key="md-button-0"
    data-md-keyboard-key="join-meeting"
    disabled={false}
    id="md-button-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "style": Object {},
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="md-button__children"
      style={
        Object {
          "opacity": "1",
        }
      }
    >
      Join meeting
    </span>
  </button>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
